:feat: comment notebook

--- a/src/pedestrians/pedestrian_detection.ipynb
+++ b/src/pedestrians/pedestrian_detection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,11 @@
     "import pandas as pd\n",
     "\n",
     "from tqdm import tqdm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from utils.pedestrians import Pedestrians\n",
     "from utils.utils import Utils\n"
@@ -54,8 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Se importan los dos datasets \n",
-    "### https://docs.python.org/3/library/glob.html"
+    "# Import pedestrian dataset\n",
+    "### https://www.kaggle.com/datasets/karthika95/pedestrian-detection?resource=download"
    ]
   },
   {
@@ -96,6 +101,13 @@
    "outputs": [],
    "source": [
     "utils = Utils()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load pedestrian Dataset"
    ]
   },
   {
@@ -178,8 +190,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get dataset description"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,12 +215,13 @@
     }
    ],
    "source": [
+    "# How many images are in the dataset\n",
     "pedestrians_df.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,6 +239,7 @@
     }
    ],
    "source": [
+    "# Identify how many possible classes are in the dataset to classify\n",
     "pedestrians_df[\"label\"].value_counts()"
    ]
   },
@@ -226,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Se muestra una imagen con vehículo"
+    "# Show a sample of pedestrian images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,23 +325,27 @@
     }
    ],
    "source": [
+    "# sample of 10 rows\n",
     "random_pedestrians = pedestrians_df.sample(n=10)\n",
+    "# show the 5 rows\n",
     "random_pedestrians.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the file path image of sample\n",
     "tmp_pedestrian_path_imgs= random_pedestrians.get(\"filename\").to_list()\n",
+    "# a variable to specify if the image is a pedestrian or not\n",
     "tmp_pedestrian_labels = random_pedestrians.get(\"label\").apply(lambda x: \"Pedestrian\" if x == 1 else \"Not pedestrian\").to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +360,9 @@
     }
    ],
    "source": [
+    "# with utils read_images method, get an array of images gotten in sample dataset\n",
     "tmp_pedestrian_imgs = utils.read_images(path_images=tmp_pedestrian_path_imgs)\n",
+    "# with utils plot_images method, plot the images gotten in sample dataset\n",
     "utils.plot_images(images=tmp_pedestrian_imgs, labels=tmp_pedestrian_labels, nrows=nrows, ncols=ncols, figsize=figsize)"
    ]
   },
@@ -343,12 +370,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Para fines de demostración se calcula el HOG de la imagen"
+    "# HOG Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,29 +390,36 @@
     }
    ],
    "source": [
+    "# convert all the images sample from BGR TO GRAY SCALE \n",
     "imgs_gray = utils.convert_BGR2GRAY(color_images=tmp_pedestrian_imgs)\n",
+    "# with utils plot_images method, plot the images gotten in sample dataset\n",
     "utils.plot_images(images=imgs_gray, labels=tmp_pedestrian_labels, nrows=nrows, ncols=ncols, figsize=figsize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize an empty list to store HOG features and corresponding HOG images\n",
     "hog_features = []\n",
     "\n",
+    "# Iterate over a list of grayscale images (sample)\n",
     "for gray_img in imgs_gray:\n",
+    "    # Extract HOG features and the HOG visualization image\n",
     "    features,hog_img = utils.extract_hog(gray_img)\n",
+    "    \n",
+    "    # Append the features and the HOG image to the list as a dictionary\n",
     "    hog_features.append({\n",
-    "        \"features\": features,\n",
-    "        \"hog_img\": hog_img\n",
+    "        \"features\": features, # HOG descriptor vector\n",
+    "        \"hog_img\": hog_img # HOG visualization image\n",
     "    })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -406,15 +440,21 @@
     }
    ],
    "source": [
+    "# Initialize an empty list to store the HOG visualization images\n",
     "hog_imgs = []\n",
+    "\n",
+    "# Iterate over the list of extracted HOG features with their index\n",
     "for idx, hog_feature in enumerate(hog_features, 0):\n",
+    "    # Append the HOG visualization image to the list\n",
     "    hog_imgs.append(hog_feature[\"hog_img\"])\n",
+    "    \n",
+    "    # Print the index, shape of the HOG feature vector, and the shape of the HOG image\n",
     "    print(f\"IMAGE_{idx}.- FEATURE SHAPE -> {hog_feature['features'].shape} [*] IMG SHAPE -> {hog_feature['hog_img'].shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +469,7 @@
     }
    ],
    "source": [
+    "# display the HOG visualization images in a grid format\n",
     "utils.plot_images(images=hog_imgs, labels=tmp_pedestrian_labels, nrows=nrows, ncols=ncols, figsize=figsize)"
    ]
   },
@@ -436,12 +477,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Se extraen las features del HOG para ambos tipos de datos"
+    "# Extract HOG features from the pedestrian dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -453,12 +494,13 @@
     }
    ],
    "source": [
+    "# Extract HOG features\n",
     "utils.process_hog_imgs(pedestrians_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -539,25 +581,32 @@
     }
    ],
    "source": [
+    "# Load the preprocessed dataset containing HOG features using pandas' pickle loader\n",
     "df = pd.read_pickle(\"data/hog_pedestrians_dataset.pkl\")\n",
+    "# Display the first 5 rows of the dataframe\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the list of HOG feature vectors from the 'features' column\n",
     "X = df[\"features\"].tolist()\n",
+    "# Extract the list of labels from the 'label' column and convert it to a NumPy array\n",
     "y = np.array(df[\"label\"].tolist())\n",
+    "# Stack the list of feature vectors into a single NumPy array (2D matrix)\n",
+    "# and ensure the data type is float64 for numerical processing\n",
     "X = np.vstack(X).astype(np.float64)\n",
+    "# Extract the list of image file paths or identifiers from the 'filename' column\n",
     "image_ids = df[\"filename\"].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -571,8 +620,11 @@
     }
    ],
    "source": [
+    "# Print the shape of the feature matrix (number of samples, number of features)\n",
     "print(X.shape)\n",
+    "# Print the shape of the label array (number of labels)\n",
     "print(y.shape)\n",
+    "# Print the total number of image identifiers (should match number of samples)\n",
     "print(len(image_ids))"
    ]
   },
@@ -580,23 +632,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Se generan los datos de entrenamiento y de prueba"
+    "# Generate the training and testing data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X_train, X_test, y_train, y_test, id_train, id_test = train_test_split(X, y, image_ids, test_size = 0.3, random_state = 42)"
+    "#Split the dataset into training and testing sets\n",
+    "# 70% of the data will be used for training, and 30% for testing\n",
+    "# The split is done in a stratified and reproducible way using random_state=42\n",
+    "X_train, X_test, y_train, y_test, id_train, id_test = train_test_split(\n",
+    "    X, # HOG feature vectors\n",
+    "    y, # Labels\n",
+    "    image_ids, # Image identifiers\n",
+    "    test_size = 0.3, # 30% of the data for testing\n",
+    "    random_state = 42 # Ensures reproducibility\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -611,12 +670,13 @@
     }
    ],
    "source": [
+    "# Display the shape of the training feature matrix\n",
     "X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -631,12 +691,13 @@
     }
    ],
    "source": [
+    "# Display the shape of the testing feature matrix\n",
     "X_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -655,12 +716,13 @@
     }
    ],
    "source": [
+    "# Display the first 5 image paths from the training set\n",
     "id_train[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,6 +741,7 @@
     }
    ],
    "source": [
+    "# Display the first 5 image paths from the testing set\n",
     "id_test[:5]"
    ]
   },
@@ -691,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -709,28 +772,29 @@
     }
    ],
    "source": [
-    "#from sklearn.svm import LinearSVC\n",
     "\n",
     "#svc_model = LinearSVC()\n",
     "#svc_model.fit(X_train, y_train)\n",
-    "from sklearn.svm import SVC\n",
     "\n",
+    "# Create an instance of a Support Vector Classifier (SVC)\n",
     "svc_model = SVC()\n",
+    "# Train the SVC model using the training feature vectors and their corresponding labels\n",
     "svc_model.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use the trained SVC model to make predictions on the test feature set\n",
     "y_predict = svc_model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -755,15 +819,28 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
+    "# Compute the confusion matrix to evaluate classification performance\n",
     "cm = confusion_matrix(y_test,y_predict)\n",
+    "# Plot the confusion matrix as a heatmap using seaborn\n",
+    "# 'annot=True' displays the counts in each cell\n",
+    "# 'fmt=\"d\"' formats the annotations as integers\n",
     "sns.heatmap(cm, annot=True, fmt = \"d\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our classification we care to know if it is a pedestrian (label **1**) to minimize missing actual pedestrians, **important for safety** \n",
+    "Where  \n",
+    "* With precission: 78% of the time the model says is pedestrian\n",
+    "* With Recall: of all true pedestrians, the model correctly detects 81% of them\n",
+    "* With F1-score: the model is a bit better at detecting pedestrians than non-pedestrians."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -783,12 +860,13 @@
     }
    ],
    "source": [
+    "# Print a detailed classification report including precision, recall, f1-score, and support for each class\n",
     "print(classification_report(y_test,y_predict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,6 +881,7 @@
     }
    ],
    "source": [
+    "# Use a function to visually display prediction results\n",
     "utils.show_predictions(image_ids=id_test, y_true= y_test, y_pred=y_predict, nrows=nrows, ncols=ncols, figsize=figsize)"
    ]
   },
@@ -815,16 +894,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define a grid of hyperparameters to search over for tuning the SVC model using GridSearchCV\n",
     "param_grid = {'C': [0.1,1, 10, 100, 1000], 'gamma': [1,0.1,0.01,0.001,0.0001], 'kernel': ['rbf']} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -986,15 +1066,14 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
+    "# Create a GridSearchCV object to perform exhaustive search over the hyperparameter grid\n",
     "grid = GridSearchCV(SVC(),param_grid,refit=True,verbose=4)\n",
     "grid.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1009,6 +1088,7 @@
     }
    ],
    "source": [
+    "# Retrieve the best combination of hyperparameters (C, gamma, kernel)\n",
     "grid.best_params_"
    ]
   },
@@ -1037,16 +1117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use the best-found SVC model\n",
     "grid_predictions = grid.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1071,13 +1152,28 @@
     }
    ],
    "source": [
+    "# Compute the confusion matrix to evaluate classification performance\n",
     "cm = confusion_matrix(y_test,grid_predictions)\n",
+    "# Plot the confusion matrix as a heatmap using seaborn\n",
+    "# 'annot=True' displays the counts in each cell\n",
+    "# 'fmt=\"d\"' formats the annotations as integers\n",
     "sns.heatmap(cm, annot=True, fmt = \"d\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our classification we care to know if it is a pedestrian (label **1**) to minimize missing actual pedestrians, **important for safety** \n",
+    "Where  \n",
+    "* With precission: 78% of the time the model says is pedestrian\n",
+    "* With Recall: of all true pedestrians, the model correctly detects 84% of them\n",
+    "* With F1-score: the model is a bit better at detecting pedestrians than non-pedestrians."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1097,12 +1193,13 @@
     }
    ],
    "source": [
+    "# Print a detailed classification report including precision, recall, f1-score, and support for each class\n",
     "print(classification_report(y_test,grid_predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1117,6 +1214,7 @@
     }
    ],
    "source": [
+    "# Use a function to visually display prediction results\n",
     "utils.show_predictions(image_ids=id_test, y_true= y_test, y_pred=grid_predictions, nrows=nrows, ncols=ncols, figsize=figsize)"
    ]
   }
