--- a/notebooks/02_nn_pedestrian_detection_(1).ipynb
+++ b/notebooks/02_nn_pedestrian_detection_(1).ipynb
@@ -12,7 +12,7 @@
         "\n",
         "<img src=\"https://github.com/alcalderagl/self_driving_car/blob/main/images/logo.png?raw=1\" alt=\"TEC DE MONTERREY\" width=\"500\"/>\n",
         "\n",
-        "**PEDESTRIAN DETECTION WITH HOG AND SVM**\n",
+        "**PEDESTRIAN DETECTION WITH NEURAL NETWORK**\n",
         "\n",
         "Tutor: Dr. David Antonio Torres\n",
         "\n",
@@ -2088,6 +2088,21 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CONCLUSION\n",
+        "\n",
+        "| Model         | Input                  | Training Accuracy | Validation Accuracy | Observations                                  |\n",
+        "|---------------|------------------------|--------------------|----------------------|------------------------------------------------|\n",
+        "| HOG + MLP     | HOG features (396)     | ~85%              | ~72%                 | Overfitting, validation curve stagnates       |\n",
+        "| CNN (pixels)  | 64x64 pixel image      | ~82%              | ~78%                 | Better generalization, lower validation loss  |\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8zr-FujK7WTu"
+      }
     }
   ],
   "metadata": {
