neural nn section

--- a/ConvNN.ipynb
+++ b/ConvNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3BfLGDNuMrE4BWtAMdK6l",
+      "authorship_tag": "ABX9TyPLlohDFzLKLyn7VjyUhss9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1034,32 +1034,6 @@
     {
       "cell_type": "code",
       "source": [
-        "round(n_samples/2) * 2"
-      ],
-      "metadata": {
-        "id": "aDoD4bIAx0hG",
-        "outputId": "afa0d4e2-a4d8-4e5c-bdf8-1bb02fbf9fd7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "44"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "samples = train_df.groupby('ClassId').first().reset_index()\n",
         "sample_imgs = []\n",
         "sample_labels = []\n",
@@ -1094,6 +1068,56 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# image shape"
+      ],
+      "metadata": {
+        "id": "w9iVSH-P0KRH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Image shape: {sample_imgs[0].size}\")"
+      ],
+      "metadata": {
+        "id": "Zaob105x0IDZ",
+        "outputId": "6c7f60d2-cabe-42ec-dd93-b43949897253",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image shape: (29, 30)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# neural network"
+      ],
+      "metadata": {
+        "id": "r9RCQFv50UtN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TGhrzeAA0Tv2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
