feat:add sections

--- a/ConvNN.ipynb
+++ b/ConvNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLlohDFzLKLyn7VjyUhss9",
+      "authorship_tag": "ABX9TyO9w8q4unIT/HK/YDZeodIJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1084,11 +1084,11 @@
         "print(f\"Image shape: {sample_imgs[0].size}\")"
       ],
       "metadata": {
-        "id": "Zaob105x0IDZ",
-        "outputId": "6c7f60d2-cabe-42ec-dd93-b43949897253",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zaob105x0IDZ",
+        "outputId": "6c7f60d2-cabe-42ec-dd93-b43949897253"
       },
       "execution_count": 31,
       "outputs": [
@@ -1104,10 +1104,55 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# neural network"
+        "# set X and Y variables"
+      ],
+      "metadata": {
+        "id": "o-suHGMv07Il"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YRdih8p006L3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# training and testing dataset"
+      ],
+      "metadata": {
+        "id": "uzr1QC4L1C0L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wH0y1ogN1CP3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# convolutional neural network"
       ],
       "metadata": {
         "id": "r9RCQFv50UtN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## CONV. Neuronal Net"
+      ],
+      "metadata": {
+        "id": "lXcVT0Pg1Qvl"
       }
     },
     {
@@ -1115,6 +1160,96 @@
       "source": [],
       "metadata": {
         "id": "TGhrzeAA0Tv2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model compile"
+      ],
+      "metadata": {
+        "id": "Y5VIzaZC1Uga"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gwQxSVdy1Upk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model score"
+      ],
+      "metadata": {
+        "id": "WAtSeSo91vjF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NK6UEh_P1v4I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loss (Categorical Crossentropy)"
+      ],
+      "metadata": {
+        "id": "eJtC20Zy10TE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Tmx-tmHw10jv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Accuracy"
+      ],
+      "metadata": {
+        "id": "nho-VSPm2N7-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vYawuVUh2NR-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model prediction"
+      ],
+      "metadata": {
+        "id": "dD-vBJbc2Qgf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GqQbKCKU2QnY"
       },
       "execution_count": null,
       "outputs": []
